# srcMove

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test  context-export.toml  example.diff  example.results.json
doc/: README.md  expected_srcdiff_format.xml  notes.md  papers.md  srcDiff_notes.md  srcMoveVis.md  technical summary.md  technical_summary.md  terms.md  to_study.md  xpath.md
doc/diagrams/: data_structure_diagram.md  pipeline_diagram.md  scoring_model_diagram.md
doc/papers/: Kasper07.md  Saini18.md  Yuekun23.md
docs/: notes.md
old/: clone_detection.hpp  debug.hpp  main_other_branch.cpp  move_match.cpp  move_match.hpp  move_registry.cpp  move_registry.hpp
src/: annotation.cpp  annotation_plan.cpp  annotation_plan.hpp  annotation_writer.cpp  annotation_writer.hpp  canonical_subtree.hpp  cli.cpp  cli.hpp  clone_detection.hpp  debug.hpp  diff_region.cpp  diff_region.hpp  main.cpp  main_other_branch.cpp  move_buckets.hpp  move_candidate.cpp  move_candidate.hpp  move_candidate_pair.cpp  move_candidate_pair.hpp  move_candidate_part.hpp  move_groups.hpp  move_groups_builder.cpp  move_groups_builder.hpp  move_match.cpp  move_match.hpp  move_region.cpp  move_region.hpp  move_registry.cpp  move_registry.hpp  pipeline.cpp  pipeline.hpp  region_filter.cpp  region_filter.hpp  src_move.hpp  summary.hpp  xpath_builder.cpp  xpath_builder.hpp  xpath_bulder.hpp
src/move_registry/: candidate_registry.cpp  candidate_registry.hpp  content_group_builder.cpp  content_group_builder.hpp  content_groups.cpp  content_groups.hpp  grouped_candidates.cpp  grouped_candidates.hpp  grouped_candidates_builder.cpp  grouped_candidates_builder.hpp  move_buckets.hpp  move_groups.cpp  move_groups.hpp  move_groups_builder.cpp  move_groups_builder.hpp  move_matcher.cpp  move_matcher.hpp  move_registry.cpp  move_registry.hpp  move_registry_debug.cpp  move_registry_debug.hpp  uuid_generator.cpp  uuid_generator.hpp
src/parse/: canonical_subtree.cpp  canonical_subtree.hpp  diff_region.cpp  diff_region.hpp
src/tools/: srcdiff_highlight_pos.cpp
src/util/: json_writer.hpp
src/writer/: annotation_plan.cpp  annotation_plan.hpp  annotation_writer.cpp  annotation_writer.hpp
test/: context-export.toml  sample_xpath_commands.md  testlib.py
test/alphabetize/: README.md  diff.xml  diff_new.xml  modified.cpp  original.cpp
test/archive/: diff.xml  diff_new.xml
test/archive/modified/: bar.cpp  foo.hpp
test/archive/original/: foo.cpp  foo.hpp
test/archives/: context-export.toml  run_end_to_end.py
test/archives/complex/: diff.xml  diff_new.xml  oracle.json  results.json  results_idea.json
test/archives/file_split/: diff_new.xml  results.json
test/archives/from_deleted_file/: diff.xml  diff_new.xml  results.json
test/archives/function_call_reorder/: diff_new.xml  modified.cpp  original.cpp  results.json
test/archives/function_content/: diff.xml  diff_new.xml  modified.cpp  oracle.json  results.json
test/archives/function_to_new_file/: diff.xml  diff_new.xml
test/archives/nested_insert/: README.md  diff_new.xml
test/archives/renamed_file/: diff.xml  diff_new.xml  oracle.json  results.json
test/archives/renamed_file_2/: diff.xml  diff_new.xml  results.json
test/archives/reorder_function_specifiers/: README.md  diff_new.xml  oracle.json  original.cpp  results.json
test/archives/standalone_blocks/: diff.xml  diff_new.xml  modified.cpp  original.cpp  results.json
test/archives/standalone_blocks_comment/: diff_new.xml  results.json
test/archives/standalone_blocks_function/: diff.xml  diff_new.xml  modified.cpp  original.cpp
test/archives/standalone_function/: diff_new.xml  results.json
test/canonical/: generate_diffs.py  test_canonical_subtree.cpp
test/clones/: type2.cpp  type4.cpp
test/complex/: diff.xml  diff_new.xml  modified.cpp  original.cpp
test/custom/: 01_1x1_basic.xml  02_2x1_basic.expected.json  04_2x2_same.expected.json  06_delete_only.expected.json  06_delete_only.xml  07_insert_only.xml  09_nested_diff.xml  10_pre_marked_move.expected.json  10_pre_marked_move_small.xml  11_different_text_same_shape.xml  12_diff_ws_equivalent.xml  13_spacing_variation.xml  14_two_independent_groups.xml  15_archive_2_files.xml  17_large_text_same.xml  run_move_tests.py
test/e2e_custom/: .gitignore  01_1x1_basic.expected.json  01_1x1_basic.expected.xml  01_1x1_basic.xml  02_2x1_basic.expected.json  02_2x1_basic.expected.xml  02_2x1_basic.xml  03_1x2_basic.expected.json  03_1x2_basic.expected.xml  03_1x2_basic.xml  04_2x2_same.expected.xml  04_2x2_same.xml  05_2x3_same.expected.json  05_2x3_same.expected.xml  05_2x3_same.xml  07_insert_only.xml  08_whitespace_only.expected.json  08_whitespace_only.xml  09_nested_diff.expected.json  09_nested_diff.expected.xml  09_nested_diff.xml  10_pre_marked_move.expected.json  10_pre_marked_move.expected.xml  10_pre_marked_move.xml  10_pre_marked_move_small.expected.xml  10_pre_marked_move_small.xml  11_different_text_same_shape.xml  12_diff_ws_equivalent.expected.xml  12_diff_ws_equivalent.xml  13_spacing_variation.expected.xml  13_spacing_variation.xml  14_two_independent_groups.expected.xml  15_archive_2_files.expected.json  15_archive_2_files.expected.xml  16_archive_cross_file_same_text.expected.json  16_archive_cross_file_same_text.expected.xml  16_archive_cross_file_same_text.xml  17_large_text_same.expected.xml  17_large_text_same.xml  18_short_text.expected.xml  (+14 more)
test/e2e_generated/: .gitignore  run_tests.py
test/function_content/: diff.xml  diff_new.xml  diff_pos.xml
test/nested_insert/: diff_new.xml  modified.cpp
test/reorder_function_specifiers/: modified.cpp
test/simple/: README.md  context-export.toml  diff.xml  diff_new.xml  modified.cpp  modified.cpp.xml  original.cpp  original.cpp.xml
test/standalone_blocks/: diff.xml  diff_new.xml
test/standalone_blocks_comment/: original.cpp
test/stress/: .gitignore  README.md  context-export.toml  diff_and_move_repo.py  run_stress.py  run_tests.py
tools/: srcdiff_highlight.cpp  srcdiff_highlight_pos.cpp  srcdiff_render.cpp  test.sh
(+131 files in other folders)
